--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -32,3 +32,21 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
+brews:
+  -
+    name: runiac
+    # GitHub/GitLab repository to push the formula to
+    # Gitea is not supported yet, but the support coming
+    tap:
+      owner: optum
+      name: homebrew-tap
+      # Optionally a token can be provided, if it differs from the token provided to GoReleaser
+      token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
+    commit_author:
+      name: goreleaserbot
+      email: goreleaser@optum.com
+    homepage: "https://github.com/optum/runiac"
+    description: "Run IaC Anywhere with Ease"
+    license: "Apache2"
+    test: |
+      system "#{bin}/runiac version"
