--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.15
+      - run: go get github.com/golang/mock/mockgen
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
