--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,26 +13,23 @@ builds:
       - darwin
     main: ./cmd/cli/main.go
     binary: runiac
+    ldflags: -s -w -X github.com/optum/runiac/cmd/cli/cmd.Version={{.Version}} -X github.com/optum/runiac/cmd/cli/cmd.Commit={{.Commit}} -X github.com/optum/runiac/cmd/cli/cmd.Date={{.Date}}
 archives:
   - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
       386: i386
       amd64: x86_64
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
 snapshot:
   name_template: "{{ .Tag }}-next"
 changelog:
   sort: asc
   filters:
     exclude:
-      - '^docs:'
-      - '^test:'
+      - "^docs:"
+      - "^test:"
 brews:
-  -
-    name: runiac
+  - name: runiac
     # GitHub/GitLab repository to push the formula to
     # Gitea is not supported yet, but the support coming
     tap:
@@ -44,7 +41,7 @@ brews:
     commit_author:
       name: goreleaserbot
       email: goreleaser@optum.com
-    homepage: "https://github.com/optum/runiac"
+    homepage: "https://runiac.com/optum/runiac"
     description: "Run IaC Anywhere with Ease"
     license: "Apache2"
     test: |
