--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,11 +13,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: "build containers"
         run: ./scripts/build_containers.sh
-      - name: Upload Unit Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v1.7
+      - name: Upload Test Results
         if: always()
         uses: actions/upload-artifact@v2
         with:
           name: Unit Test Results
-          github_token: ${{ secrets.GITHUB_TOKEN }}
           files: reports/*.xml
