--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,13 +16,10 @@ jobs:
           go-version: '^1.16.4'
       - name: "build containers"
         run: |
-        curl -L -o gotestsum.tgz "https://github.com/gotestyourself/gotestsum/releases/download/v1.6.4/gotestsum_1.6.4_linux_amd64.tar.gz" && \
-        tar -C /usr/local/bin -xzf gotestsum.tgz && \
-        rm gotestsum.tgz && \
-        rm /usr/local/bin/LICENSE && \
-        rm /usr/local/bin/README.md
-        
-        gotestsum --format standard-verbose --junitfile ./reports/junit.xml --raw-command -- go test -parallel 5 --json ./...
+        curl -L -o gotestsum.tgz "https://github.com/gotestyourself/gotestsum/releases/download/v1.6.4/gotestsum_1.6.4_linux_amd64.tar.gz";
+        tar -C . -xzf gotestsum.tgz;
+
+        ./gotestsum --format standard-verbose --junitfile ./reports/junit.xml --raw-command -- go test -parallel 5 --json ./...
       - name: Upload Test Results
         if: always()
         uses: actions/upload-artifact@v2
