--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,8 @@ jobs:
           gotestsum_version: 1.6.4
       - name: "go test"
         run: |
-        rm -rf ./reports && mkdir ./reports
-        gotestsum --format standard-verbose --junitfile ./reports/junit.xml --raw-command -- go test -parallel 5 --json ./...
+        rm -rf ./reports && mkdir ./reports;
+        gotestsum --format standard-verbose --junitfile ./reports/junit.xml --raw-command -- go test -parallel 5 --json ./...;
       - name: Upload Test Results
         if: always()
         uses: actions/upload-artifact@v2
