--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,15 +13,15 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: '^1.16.4'
+          go-version: "^1.16.4"
       - name: Setup gotestsum
         uses: autero1/action-gotestsum@v0.1.0
         with:
           gotestsum_version: 1.6.4
       - name: "go test"
         run: |
-        rm -rf ./reports && mkdir ./reports;
-        gotestsum --format standard-verbose --junitfile ./reports/junit.xml --raw-command -- go test -parallel 5 --json ./...;
+          rm -rf ./reports && mkdir ./reports;
+          gotestsum --format standard-verbose --junitfile ./reports/junit.xml --raw-command -- go test -parallel 5 --json ./...;
       - name: Upload Test Results
         if: always()
         uses: actions/upload-artifact@v2
