removing examples into starter github repos

--- a/examples/terraform-azure-hello-world-multi-region/runiac.yml
+++ b/examples/terraform-azure-hello-world-multi-region/runiac.yml
@@ -1,4 +1,4 @@
 project: azure-hello-world
 primary_region: centralus
-regional_regions: centralus
+regional_regions: centralus,eastus,westus,uksouth,southeastasia
 runner: terraform
