--- a/examples/terraform-azure-hello-world-multi-region/runiac.yml
+++ b/examples/terraform-azure-hello-world-multi-region/runiac.yml
@@ -2,3 +2,5 @@ project: azure-hello-world
 primary_region: centralus
 regional_regions: centralus,eastus,westus,uksouth,southeastasia
 runner: terraform
+max_retries: 3
+time_between_retries: 30
