--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Release CLI (GoReleaser)
         uses: goreleaser/goreleaser-action@v2
         with:
-          version: latest
+          version: v1.13.1 #latest
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
