--- a/.github/workflows/unit-test-results.yml
+++ b/.github/workflows/unit-test-results.yml
@@ -14,32 +14,12 @@ jobs:
       github.event.workflow_run.conclusion != 'skipped'
 
     steps:
-      - name: Download Artifacts
-        uses: actions/github-script@v7
+      - name: Download package
+        uses: actions/download-artifact@v4
         with:
-          script: |
-            var fs = require('fs');
-            var path = require('path');
-            var artifacts_path = path.join('${{github.workspace}}', 'artifacts')
-            fs.mkdirSync(artifacts_path, { recursive: true })
-
-            var artifacts = await github.actions.listWorkflowRunArtifacts({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               run_id: ${{ github.event.workflow_run.id }},
-            });
-
-            for (const artifact of artifacts.data.artifacts) {
-               var download = await github.actions.downloadArtifact({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  artifact_id: artifact.id,
-                  archive_format: 'zip',
-               });
-               var artifact_path = path.join(artifacts_path, `${artifact.name}.zip`)
-               fs.writeFileSync(artifact_path, Buffer.from(download.data));
-               console.log(`Downloaded ${artifact_path}`);
-            }
+         name: Unit Test Results
+         path: ./artifacts
+         
       - name: Extract Artifacts
         run: |
           for file in artifacts/*.zip
