--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,5 @@
 name: build
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
@@ -23,9 +20,8 @@ jobs:
         run: |
           rm -rf ./reports && mkdir ./reports;
           gotestsum --format standard-verbose --junitfile ./reports/junit.xml --raw-command -- go test -parallel 5 --json ./...;
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v4
+      - name: Publish Unit Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2.15.1
         with:
-          name: Unit Test Results
-          path: reports/*.xml
+          commit: ${{ github.event.workflow_run.head_sha }}
+          files: "reports/*.xml"
