--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -32,7 +32,7 @@ brews:
   - name: runiac
     # GitHub/GitLab repository to push the formula to
     # Gitea is not supported yet, but the support coming
-    tap:
+    repository:
       owner: optum
       name: homebrew-tap
       # Optionally a token can be provided, if it differs from the token provided to GoReleaser
