--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -16,6 +16,9 @@ builds:
     ldflags: -s -w -X github.com/optum/runiac/cmd/cli/cmd.Version={{.Version}} -X github.com/optum/runiac/cmd/cli/cmd.Commit={{.Commit}} -X github.com/optum/runiac/cmd/cli/cmd.Date={{.Date}}
 archives:
   - name_template: >-
+      {{- .ProjectName }}_
+      {{- .Version }}_
+      {{- .Os }}_
       {{- if eq .Arch "amd64" }}x86_64
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
