--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -41,7 +41,9 @@ brews:
       name: homebrew-tap
       # Optionally a token can be provided, if it differs from the token provided to GoReleaser
       token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
-    folder: Formula
+    directory: Formula
+    pull_request:
+      enabled: true
     commit_author:
       name: goreleaserbot
       email: goreleaser@optum.com
