--- a/.github/workflows/release-dryrun.yml
+++ b/.github/workflows/release-dryrun.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Release CLI (GoReleaser)
         uses: goreleaser/goreleaser-action@v6
         with:
-          version: latest
+          version: "~> v2"
           args: release --clean --skip=publish --snapshot
         env:
           GITHUB_TOKEN: ${{ github.token }}
